--- a/package.json
+++ b/package.json
@@ -86,10 +86,12 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
-    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
+    "cors": "^2.8.5",
+    "esbuild": "^0.25.0",
     "ws": "^8.18.0",
+      "uuid": "^9.0.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
@@ -115,7 +117,11 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.1",
     "typescript": "5.6.3",
-    "vite": "^5.4.14"
+    "vite": "^5.4.14",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
+    "esbuild-plugin-tsconfig-paths": "^1.0.1",
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
