--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx src/index.ts",
     "build": "node esbuild.config.js",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "node dist/index.js",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "check": "tsc --noEmit"
