--- a/package.json
+++ b/package.json
@@ -2,65 +2,48 @@
   "name": "rest-express",
   "version": "1.0.0",
   "type": "module",
-  "license": "MIT",
+  "description": "Backend API server for Harvest Direct e-commerce platform",
   "main": "dist/index.js",
   "scripts": {
     "dev": "NODE_ENV=development tsx src/index.ts",
     "build": "node esbuild.config.js",
-    "start": "node dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "check": "tsc --noEmit"
   },
-  "dependencies": {
-    "@jridgewell/trace-mapping": "^0.3.25",
+ "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/memoizee": "^0.4.12",
-    "@types/nodemailer": "^6.4.17",
-    "@types/qrcode": "^1.5.5",
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "date-fns": "^3.6.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "jsbarcode": "^3.11.6",
     "jsonwebtoken": "^9.0.2",
-    "memoizee": "^0.4.17",
-    "memorystore": "^1.6.7",
     "nodemailer": "^7.0.3",
-    "openid-client": "^6.5.0",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
-    "uuid": "^9.0.0",
     "ws": "^8.18.0",
+      "uuid": "^9.0.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/connect-pg-simple": "^7.0.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "20.16.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
+    "@types/nodemailer": "^6.4.17",
     "@types/ws": "^8.5.13",
     "drizzle-kit": "^0.30.4",
-    "esbuild": "^0.25.0",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "tsx": "^4.19.1",
     "typescript": "5.6.3"
-  },
-  "optionalDependencies": {
-    "bufferutil": "^4.0.8"
   },
   "keywords": [
     "ecommerce",
@@ -69,5 +52,6 @@
     "express",
     "postgresql"
   ],
-  "author": "Your Name"
+  "author": "Your Name",
+  "license": "MIT"
 }
