--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
 
-PGHOST=ep-proud-art-a5b7es39.us-east-2.aws.neon.tech
+PGHOST=dpg-d0qlnoidbo4c73c914n0-a
 PGPORT=5432
-PGDATABASE=neondb
-PGUSER=neondb_owner
-PGPASSWORD=npg_7v5GuESbnBgp
+PGDATABASE=ecommerce_qn64
+PGUSER=ecommerce_qn64_user
+PGPASSWORD=YQA3LJx0Ao1R9HuXdlVnwRMXeqCxrNKZ
 
 # optional full DATABASE_URL
-DATABASE_URL=postgresql://neondb_owner:npg_7v5GuESbnBgp@ep-proud-art-a5b7es39.us-east-2.aws.neon.tech/neondb?sslmode=require
-
+DATABASE_URL=postgresql://ecommerce_qn64_user:YQA3LJx0Ao1R9HuXdlVnwRMXeqCxrNKZ@dpg-d0qlnoidbo4c73c914n0-a.oregon-postgres.render.com/ecommerce_qn64
 JWT_SECRET=harvest_direct_super_secret_jwt_key_2024_make_this_very_long_and_random_in_production
 
 # Backend API URL
