--- a/.env
+++ b/.env
@@ -6,7 +6,8 @@ PGUSER=ecommerce_qn64_user
 PGPASSWORD=YQA3LJx0Ao1R9HuXdlVnwRMXeqCxrNKZ
 
 # optional full DATABASE_URL
-DATABASE_URL=postgresql://ecommerce_qn64_user:YQA3LJx0Ao1R9HuXdlVnwRMXeqCxrNKZ@dpg-d0qlnoidbo4c73c914n0-a.oregon-postgres.render.com/ecommerce_qn64
+DATABASE_URL=postgresql://neondb_owner:npg_vyDijeHsq26E@ep-cold-block-a8d6r4ih-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
+
 JWT_SECRET=harvest_direct_super_secret_jwt_key_2024_make_this_very_long_and_random_in_production
 
 # Backend API URL
@@ -16,10 +17,13 @@ VITE_API_URL=https://farmfreshbackend-x7th.onrender.com
 VITE_APP_NAME=Harvest Direct
 VITE_APP_VERSION=1.0.0
 
+# pg_dump --no-owner --no-privileges --no-publications --no-subscriptions --no-tablespaces -Fc -v -d "postgresql://neondb_owner:npg_7v5GuESbnBgp@ep-proud-art-a5b7es39.us-east-2.aws.neon.tech/neondb?sslmode=require" -f database.bak
+# pg_restore -v -d "<postgres connection string>" database.bak
+# postgresql://neondb_owner:npg_vyDijeHsq26E@ep-cold-block-a8d6r4ih-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
 
 # Razorpay Payment Gateway
-RAZORPAY_KEY_ID=your_razorpay_key_id_here
-RAZORPAY_KEY_SECRET=your_razorpay_secret_key_here
+RAZORPAY_KEY_ID=rzp_test_S94PkPDE4dpiOy
+RAZORPAY_KEY_SECRET=FkPWzsLPpEW4ux0WGzf4ki6Q1
 
 # Email Service Configuration (Optional - for notifications)
 EMAIL_HOST=smtp.gmail.com
@@ -35,3 +39,7 @@ PORT=5000
 # Admin Default Credentials
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin123
+
+
+
+
