--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "db:generate": "drizzle-kit generate",
     "check": "tsc --noEmit"
   },
- "dependencies": {
+  "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
@@ -23,10 +23,11 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "razorpay": "^2.9.6",
+    "uuid": "^9.0.0",
     "ws": "^8.18.0",
-      "uuid": "^9.0.0",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
