--- a/package.json
+++ b/package.json
@@ -26,8 +26,15 @@
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "razorpay": "^2.9.6",
-    "uuid": "^9.0.0",
+    "sharp": "^0.34.2",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
+    "wouter": "^3.3.5",
     "ws": "^8.18.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
