--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ DATABASE_URL=postgresql://neondb_owner:npg_Yuzlvjxg1OR2@ep-little-butterfly-a8bn
 JWT_SECRET=harvest_direct_super_secret_jwt_key_2024_make_this_very_long_and_random_in_production
 
 # Backend API URL
-VITE_API_URL=https://farmfreshbackend-x7th.onrender.com
+VITE_API_URL=https://farmfreshnewbackend.onrender.com
 
 # Application Settings
 VITE_APP_NAME=Harvest Direct
@@ -22,8 +22,8 @@ VITE_APP_VERSION=1.0.0
 # postgresql://neondb_owner:npg_vyDijeHsq26E@ep-cold-block-a8d6r4ih-pooler.eastus2.azure.neon.tech/neondb?sslmode=require
 
 # Razorpay Payment Gateway
-RAZORPAY_KEY_ID=rzp_test_S94PkPDE4dpiOy
-RAZORPAY_KEY_SECRET=FkPWzsLPpEW4ux0WGzf4ki6Q1
+RAZORPAY_KEY_ID=rzp_test_fOseXTSeB3EOEX
+RAZORPAY_KEY_SECRET=1VFWePNeccb5oPzvzQJay51W
 
 
 # Email Service Configuration (Optional - for notifications)
