--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Backend API server for Harvest Direct e-commerce platform",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "NODE_ENV=development tsx src/index.ts",
+    "dev": "cross-env NODE_ENV=development tsx src/index.ts",
     "build": "node esbuild.config.js",
     "start": "NODE_ENV=production node dist/index.js",
     "db:push": "drizzle-kit push",
@@ -17,12 +17,14 @@
     "bcrypt": "^6.0.0",
     "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "esbuild": "^0.25.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "razorpay": "^2.9.6",
@@ -48,7 +50,8 @@
     "@types/node": "20.16.11",
     "@types/nodemailer": "^6.4.17",
     "@types/ws": "^8.5.13",
-    "drizzle-kit": "^0.30.4",
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.30.6",
     "esbuild-plugin-tsconfig-paths": "^1.0.1",
     "tsx": "^4.19.1",
     "typescript": "5.6.3"
